--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "corona_admin",
+  "name": "vstore_admin",
   "version": "2.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.php",
   "dependencies": {
     "@mdi/font": "^3.7.95",
     "bootstrap": "^4.4.1",
@@ -26,8 +26,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "bootstrapdash",
+  "author": "mihod",
   "url": "http://www.bootstrapdash.com/",
-  "copyright": "",
-  "license": ""
+  "copyright": "corona_admin",
+  "license": "MIT License"
 }
