--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "ext-pdo": "*"
     },
     "require-dev": {
-        "doctrine/dbal": "~2.0"
+        "doctrine/dbal": "~2.0",
+        "phpunit/phpunit": "^8.5 || ^9.4"
     },
     "autoload": {
         "psr-4": {
@@ -26,6 +27,11 @@
         "psr-0": {
             "Vstore\\Router\\": "src",
             "Model\\": "Model,"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Vstore\\Test\\": "test/"
         }
     },
     "minimum-stability": "dev",
